--- a/2024.2/web1/T1/aula_25_01_13/index.html
+++ b/2024.2/web1/T1/aula_25_01_13/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Título da página</title>
+    <link rel="stylesheet" href="style.css">    
     <script src="js/script.js"></script>
 </head>
 <body>
