--- a/2024.2/web1/T1/aula_25_01_27/index.html
+++ b/2024.2/web1/T1/aula_25_01_27/index.html
@@ -4,12 +4,9 @@
     <meta charset="UTF-8">
     <title>Document</title>
 </head>
-<body>
-    <p>Valor 1: <input type="text" id="val1"></p>
-    <p>Valor 2: <input type="text" id="val2"></p>
-    <p id="resp">Resposta: </p>
-    <input type="submit" value="Somar" onclick="soma()">
-    <input type="submit" value="Subtrair" onclick="subtracao()">
+<body id="body">
+    <input type="button" value="Apagar a luz" onclick="lightsOff()" id="botao"><br><br>
+
 </body>
 <script src="js/script.js"></script>
 </html>
