Manipulando conteúdos no DOM

--- a/2025.2/web2/aula_25_08_28/aula.html
+++ b/2025.2/web2/aula_25_08_28/aula.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Titulo da página</title>
 </head>
-<body>
+<img>
     <h1>Título aqui</h1>
     <p class="txt">Um texto qualquer... </p>
+    <img id="img" src="img/saladeaula.jpg" width="300">
 </body>
 <script src="aula.js"></script>
 </html>
