Estilos com CSS

--- a/2025.2/web1/aula_25_09_25/pagina2.html
+++ b/2025.2/web1/aula_25_09_25/pagina2.html
@@ -6,12 +6,13 @@
     <style>        
         #inicio { color: black; background-color: green; } 
         #meio { color: black; background-color: yellow; } 
-        #fim { color: black; background-color: red; } 
+        .fim { color: black; background-color: red; } 
     </style>
 </head>
 <body>
-    <h1 id="inicio">Olá</h1>
+    <p id="inicio">Olá</p>
     <p id="meio">Mundo</p>
-    <p id="fim">Estou vivo</p>
+    <p class="fim">Estou</p>
+    <p class="fim">Vivo</p>
 </body>
 </html>
